[gd_scene load_steps=2 format=3 uid="uid://n8q7a6kfi4vwe"]

[ext_resource type="Script" path="res://src/ui/screens/crew/InitialCrewCreation.gd" id="1_script"]

[node name="InitialCrewCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitlePanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"DarkPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TitlePanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TitlePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Create Your Initial Crew"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/TitlePanel/VBoxContainer"]
layout_mode = 2

[node name="CrewNameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TitlePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter Crew Name"
alignment = 1

[node name="CrewSizeOption" type="OptionButton" parent="MarginContainer/VBoxContainer/TitlePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "4 Members"
popup/item_0/id = 4
popup/item_1/text = "5 Members"
popup/item_1/id = 5
popup/item_2/text = "6 Members"
popup/item_2/id = 6

[node name="MainContent" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="CharacterList" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"DarkPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/CharacterList"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MainContent/CharacterList/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Available Characters"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/MainContent/CharacterList/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MainContent/CharacterList/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Content" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/CharacterList/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SelectedCharacters" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"DarkPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/SelectedCharacters"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MainContent/SelectedCharacters/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Selected Characters"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/MainContent/SelectedCharacters/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MainContent/SelectedCharacters/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Content" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/SelectedCharacters/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FooterPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"DarkPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/FooterPanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/FooterPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="CreateButton" type="Button" parent="MarginContainer/VBoxContainer/FooterPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Create Crew"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/TitlePanel/VBoxContainer/CrewNameInput" to="." method="_on_crew_name_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/TitlePanel/VBoxContainer/CrewSizeOption" to="." method="_on_crew_size_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FooterPanel/HBoxContainer/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FooterPanel/HBoxContainer/CreateButton" to="." method="_on_create_pressed"] 